# FDM

./: README.md  pyproject.toml
animations/FES/: Medication.json
src/: app.py  config.py  paths.py  train.py  utils.py
