[project]
name = "foot-drop-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
    "torch>=2.5.1",
]
